--- a/README
+++ b/README
@@ -1,6 +1,6 @@
---------------------------------
-| anti-religie-stad-maastricht |
---------------------------------
+------------------
+| anti-soul-city |
+------------------
 
 # alcoholism
 https://en.wikipedia.org/wiki/Alcoholism
